commit from netcore service

--- a/indexDllIos.html
+++ b/indexDllIos.html
@@ -9,9 +9,9 @@
 },{
   "bank_id": 2,
   "bank_name": "BANAMEX",
-  "sell": 19.89,
-  "buy": 18.82,
-  "date": "2022-11-30 12:10:09",
+  "sell": 19.83,
+  "buy": 18.76,
+  "date": "2022-11-30 14:40:09",
   "prev_buy": 19.71,
   "prev_sell": 18.64
 },{
@@ -33,11 +33,11 @@
 },{
   "bank_id": 5,
   "bank_name": "SCOTIABANK",
-  "sell": 19.70378575,
-  "buy": 18.975936,
-  "date": "2022-11-30 14:20:11",
-  "prev_buy": 19.6135335,
-  "prev_sell": 18.887932
+  "sell": 19.72291475,
+  "buy": 18.993772,
+  "date": "2022-11-30 14:40:10",
+  "prev_buy": 19.602748,
+  "prev_sell": 18.87774
 },{
   "bank_id": 6,
   "bank_name": "BANXICO",
@@ -57,11 +57,11 @@
 },{
   "bank_id": 8,
   "bank_name": "BANSI",
-  "sell": 19.61496,
-  "buy": 19.07945,
-  "date": "2022-11-30 14:20:13",
-  "prev_buy": 19.5171525,
-  "prev_sell": 18.984299
+  "sell": 19.62599625,
+  "buy": 19.090679,
+  "date": "2022-11-30 14:40:12",
+  "prev_buy": 19.50642,
+  "prev_sell": 18.974055
 },{
   "bank_id": 9,
   "bank_name": "BAJIO",
@@ -89,11 +89,11 @@
 },{
   "bank_id": 12,
   "bank_name": "FAMSA",
-  "sell": 19.760256,
-  "buy": 18.9826,
-  "date": "2022-11-30 14:20:15",
-  "prev_buy": 19.661724,
-  "prev_sell": 18.887932
+  "sell": 19.771374,
+  "buy": 18.993772,
+  "date": "2022-11-30 14:40:14",
+  "prev_buy": 19.650912,
+  "prev_sell": 18.87774
 },{
   "bank_id": 13,
   "bank_name": "BANCOAZTECA",
@@ -108,16 +108,16 @@
   "sell": 20.22,
   "buy": 19.69,
   "date": "2022-11-30 14:20:16",
-  "prev_buy": 20.22,
-  "prev_sell": 19.69
+  "prev_buy": 20.33,
+  "prev_sell": 19.81
 },{
   "bank_id": 15,
   "bank_name": "BANJERCITO",
-  "sell": 19.8733,
-  "buy": 18.8628,
-  "date": "2022-11-30 14:20:16",
-  "prev_buy": 19.7673,
-  "prev_sell": 18.7568
+  "sell": 19.9105,
+  "buy": 18.9,
+  "date": "2022-11-30 14:40:16",
+  "prev_buy": 19.7707,
+  "prev_sell": 18.7602
 },{
   "bank_id": 16,
   "bank_name": "BANREGIO",
@@ -161,91 +161,91 @@
 },{
   "bank_id": 21,
   "bank_name": "CIBANCO",
-  "sell": 19.6827648,
-  "buy": 18.876065,
-  "date": "2022-11-30 14:20:21",
-  "prev_buy": 19.5846192,
-  "prev_sell": 18.7819283
+  "sell": 19.6938392,
+  "buy": 18.8871743,
+  "date": "2022-11-30 14:40:21",
+  "prev_buy": 19.5746624,
+  "prev_sell": 18.77325525
 },{
   "bank_id": 22,
   "bank_name": "COMPARTAMOS",
-  "sell": 19.7215104,
-  "buy": 18.914805,
-  "date": "2022-11-30 14:20:21",
-  "prev_buy": 19.6231716,
-  "prev_sell": 18.8204751
+  "sell": 19.7326066,
+  "buy": 18.9259371,
+  "date": "2022-11-30 14:40:21",
+  "prev_buy": 19.6131952,
+  "prev_sell": 18.81178425
 },{
   "bank_id": 23,
   "bank_name": "BANCOPPEL",
-  "sell": 19.7311968,
-  "buy": 18.740475,
-  "date": "2022-11-30 14:20:22",
-  "prev_buy": 19.6328097,
-  "prev_sell": 18.6470145
+  "sell": 19.74229845,
+  "buy": 18.7515045,
+  "date": "2022-11-30 14:40:22",
+  "prev_buy": 19.6228284,
+  "prev_sell": 18.63840375
 },{
   "bank_id": 24,
   "bank_name": "BANCREA",
-  "sell": 19.69051392,
-  "buy": 18.936112,
-  "date": "2022-11-30 14:20:23",
-  "prev_buy": 19.59232968,
-  "prev_sell": 18.84167584
+  "sell": 19.70159268,
+  "buy": 18.94725664,
+  "date": "2022-11-30 14:40:22",
+  "prev_buy": 19.58236896,
+  "prev_sell": 18.8329752
 },{
   "bank_id": 25,
   "bank_name": "BANKAOOL",
-  "sell": 19.6052736,
-  "buy": 18.75016,
-  "date": "2022-11-30 14:20:23",
-  "prev_buy": 19.5075144,
-  "prev_sell": 18.6566512
+  "sell": 19.6163044,
+  "buy": 18.7611952,
+  "date": "2022-11-30 14:40:23",
+  "prev_buy": 19.4975968,
+  "prev_sell": 18.648036
 },{
   "bank_id": 26,
   "bank_name": "BANSEFI",
-  "sell": 19.7796288,
-  "buy": 18.53709,
-  "date": "2022-11-30 14:20:24",
-  "prev_buy": 19.6810002,
-  "prev_sell": 18.4446438
+  "sell": 19.7907577,
+  "buy": 18.5479998,
+  "date": "2022-11-30 14:40:24",
+  "prev_buy": 19.6709944,
+  "prev_sell": 18.4361265
 },{
   "bank_id": 27,
   "bank_name": "BANCOFITERRA",
-  "sell": 19.7408832,
-  "buy": 18.96323,
-  "date": "2022-11-30 14:20:24",
-  "prev_buy": 19.6424478,
-  "prev_sell": 18.8686586
+  "sell": 19.7519903,
+  "buy": 18.9743906,
+  "date": "2022-11-30 14:40:24",
+  "prev_buy": 19.6324616,
+  "prev_sell": 18.8599455
 },{
   "bank_id": 28,
   "bank_name": "BANCAMIFEL",
-  "sell": 19.85712,
-  "buy": 18.5952,
-  "date": "2022-11-30 14:20:25",
-  "prev_buy": 19.758105,
-  "prev_sell": 18.502464
+  "sell": 19.8682925,
+  "buy": 18.606144,
+  "date": "2022-11-30 14:40:24",
+  "prev_buy": 19.74806,
+  "prev_sell": 18.49392
 },{
   "bank_id": 29,
   "bank_name": "AMERICAN EXPRESS",
-  "sell": 19.82709216,
-  "buy": 18.914805,
-  "date": "2022-11-30 14:20:25",
-  "prev_buy": 19.72822689,
-  "prev_sell": 18.8204751
+  "sell": 19.83824777,
+  "buy": 18.9259371,
+  "date": "2022-11-30 14:40:25",
+  "prev_buy": 19.71819708,
+  "prev_sell": 18.81178425
 },{
   "bank_id": 30,
   "bank_name": "VISA",
-  "sell": 19.808688,
-  "buy": 18.934175,
-  "date": "2022-11-30 14:20:26",
-  "prev_buy": 19.7099145,
-  "prev_sell": 18.8397485
+  "sell": 19.81983325,
+  "buy": 18.9453185,
+  "date": "2022-11-30 14:40:25",
+  "prev_buy": 19.699894,
+  "prev_sell": 18.83104875
 },{
   "bank_id": 31,
   "bank_name": "MASTERCARD",
-  "sell": 19.808688,
-  "buy": 18.92449,
-  "date": "2022-11-30 14:20:26",
-  "prev_buy": 19.7099145,
-  "prev_sell": 18.8301118
+  "sell": 19.81983325,
+  "buy": 18.9356278,
+  "date": "2022-11-30 14:40:26",
+  "prev_buy": 19.699894,
+  "prev_sell": 18.8214165
 },{
   "bank_id": 32,
   "bank_name": "BANORTE",
