commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -46059,6 +46059,10 @@
     {
       "Date": "2022-11-30 10:00",
       "Rate": "19.3637"
+    },
+    {
+      "Date": "2022-11-30 11:00",
+      "Rate": "19.2917"
     }
   ]
 }
