--- a/indexRt.html
+++ b/indexRt.html
@@ -46063,6 +46063,10 @@
     {
       "Date": "2022-11-30 11:00",
       "Rate": "19.2917"
+    },
+    {
+      "Date": "2022-11-30 12:00",
+      "Rate": "19.2970"
     }
   ]
 }
