--- a/indexRt.html
+++ b/indexRt.html
@@ -46067,6 +46067,10 @@
     {
       "Date": "2022-11-30 12:00",
       "Rate": "19.2970"
+    },
+    {
+      "Date": "2022-11-30 13:00",
+      "Rate": "19.2899"
     }
   ]
 }
