--- a/indexDllIos.html
+++ b/indexDllIos.html
@@ -33,11 +33,11 @@
 },{
   "bank_id": 5,
   "bank_name": "SCOTIABANK",
-  "sell": 19.6346975,
-  "buy": 18.9042,
-  "date": "2022-11-30 17:20:11",
-  "prev_buy": 19.5756825,
-  "prev_sell": 18.84442
+  "sell": 19.6581,
+  "buy": 18.9189,
+  "date": "2022-11-30 17:40:11",
+  "prev_buy": 19.599085,
+  "prev_sell": 18.86206
 },{
   "bank_id": 6,
   "bank_name": "BANXICO",
@@ -57,11 +57,11 @@
 },{
   "bank_id": 8,
   "bank_name": "BANSI",
-  "sell": 19.5382125,
-  "buy": 19.00065,
-  "date": "2022-11-30 17:20:14",
-  "prev_buy": 19.4875875,
-  "prev_sell": 18.93367
+  "sell": 19.5615,
+  "buy": 19.015425,
+  "date": "2022-11-30 17:40:13",
+  "prev_buy": 19.502775,
+  "prev_sell": 18.958295
 },{
   "bank_id": 9,
   "bank_name": "BAJIO",
@@ -89,11 +89,11 @@
 },{
   "bank_id": 12,
   "bank_name": "FAMSA",
-  "sell": 19.68294,
-  "buy": 18.9042,
-  "date": "2022-11-30 17:20:16",
-  "prev_buy": 19.63194,
-  "prev_sell": 18.83756
+  "sell": 19.7064,
+  "buy": 18.9189,
+  "date": "2022-11-30 17:40:15",
+  "prev_buy": 19.64724,
+  "prev_sell": 18.86206
 },{
   "bank_id": 13,
   "bank_name": "BANCOAZTECA",
@@ -113,11 +113,11 @@
 },{
   "bank_id": 15,
   "bank_name": "BANJERCITO",
-  "sell": 19.7931,
-  "buy": 18.7826,
-  "date": "2022-11-30 17:20:18",
-  "prev_buy": 19.7319,
-  "prev_sell": 18.7214
+  "sell": 19.7945,
+  "buy": 18.784,
+  "date": "2022-11-30 17:40:16",
+  "prev_buy": 19.732,
+  "prev_sell": 18.7215
 },{
   "bank_id": 16,
   "bank_name": "BANREGIO",
@@ -161,91 +161,91 @@
 },{
   "bank_id": 21,
   "bank_name": "CIBANCO",
-  "sell": 19.605752,
-  "buy": 18.798105,
-  "date": "2022-11-30 17:20:26",
-  "prev_buy": 19.554952,
-  "prev_sell": 18.731839
+  "sell": 19.62912,
+  "buy": 18.8127225,
+  "date": "2022-11-30 17:40:22",
+  "prev_buy": 19.570192,
+  "prev_sell": 18.7562015
 },{
   "bank_id": 22,
   "bank_name": "COMPARTAMOS",
-  "sell": 19.644346,
-  "buy": 18.836685,
-  "date": "2022-11-30 17:20:27",
-  "prev_buy": 19.593446,
-  "prev_sell": 18.770283
+  "sell": 19.66776,
+  "buy": 18.8513325,
+  "date": "2022-11-30 17:40:22",
+  "prev_buy": 19.608716,
+  "prev_sell": 18.7946955
 },{
   "bank_id": 23,
   "bank_name": "BANCOPPEL",
-  "sell": 19.6539945,
-  "buy": 18.663075,
-  "date": "2022-11-30 17:20:27",
-  "prev_buy": 19.6030695,
-  "prev_sell": 18.597285
+  "sell": 19.67742,
+  "buy": 18.6775875,
+  "date": "2022-11-30 17:40:23",
+  "prev_buy": 19.618347,
+  "prev_sell": 18.6214725
 },{
   "bank_id": 24,
   "bank_name": "BANCREA",
-  "sell": 19.6134708,
-  "buy": 18.857904,
-  "date": "2022-11-30 17:20:28",
-  "prev_buy": 19.5626508,
-  "prev_sell": 18.7914272
+  "sell": 19.636848,
+  "buy": 18.872568,
+  "date": "2022-11-30 17:40:23",
+  "prev_buy": 19.5778968,
+  "prev_sell": 18.8158672
 },{
   "bank_id": 25,
   "bank_name": "BANKAOOL",
-  "sell": 19.528564,
-  "buy": 18.67272,
-  "date": "2022-11-30 17:20:28",
-  "prev_buy": 19.477964,
-  "prev_sell": 18.606896
+  "sell": 19.55184,
+  "buy": 18.68724,
+  "date": "2022-11-30 17:40:24",
+  "prev_buy": 19.493144,
+  "prev_sell": 18.631096
 },{
   "bank_id": 26,
   "bank_name": "BANSEFI",
-  "sell": 19.702237,
-  "buy": 18.46053,
-  "date": "2022-11-30 17:20:29",
-  "prev_buy": 19.651187,
-  "prev_sell": 18.395454
+  "sell": 19.72572,
+  "buy": 18.474885,
+  "date": "2022-11-30 17:40:24",
+  "prev_buy": 19.666502,
+  "prev_sell": 18.419379
 },{
   "bank_id": 27,
   "bank_name": "BANCOFITERRA",
-  "sell": 19.663643,
-  "buy": 18.88491,
-  "date": "2022-11-30 17:20:29",
-  "prev_buy": 19.612693,
-  "prev_sell": 18.818338
+  "sell": 19.68708,
+  "buy": 18.899595,
+  "date": "2022-11-30 17:40:25",
+  "prev_buy": 19.627978,
+  "prev_sell": 18.842813
 },{
   "bank_id": 28,
   "bank_name": "BANCAMIFEL",
-  "sell": 19.779425,
-  "buy": 18.5184,
-  "date": "2022-11-30 17:20:29",
-  "prev_buy": 19.728175,
-  "prev_sell": 18.45312
+  "sell": 19.803,
+  "buy": 18.5328,
+  "date": "2022-11-30 17:40:25",
+  "prev_buy": 19.74355,
+  "prev_sell": 18.47712
 },{
   "bank_id": 29,
   "bank_name": "AMERICAN EXPRESS",
-  "sell": 19.74951465,
-  "buy": 18.836685,
-  "date": "2022-11-30 17:20:30",
-  "prev_buy": 19.69834215,
-  "prev_sell": 18.770283
+  "sell": 19.773054,
+  "buy": 18.8513325,
+  "date": "2022-11-30 17:40:25",
+  "prev_buy": 19.7136939,
+  "prev_sell": 18.7946955
 },{
   "bank_id": 30,
   "bank_name": "VISA",
-  "sell": 19.7311825,
-  "buy": 18.855975,
-  "date": "2022-11-30 17:20:31",
-  "prev_buy": 19.6800575,
-  "prev_sell": 18.789505
+  "sell": 19.7547,
+  "buy": 18.8706375,
+  "date": "2022-11-30 17:40:26",
+  "prev_buy": 19.695395,
+  "prev_sell": 18.8139425
 },{
   "bank_id": 31,
   "bank_name": "MASTERCARD",
-  "sell": 19.7311825,
-  "buy": 18.84633,
-  "date": "2022-11-30 17:20:31",
-  "prev_buy": 19.6800575,
-  "prev_sell": 18.779894
+  "sell": 19.7547,
+  "buy": 18.860985,
+  "date": "2022-11-30 17:40:26",
+  "prev_buy": 19.695395,
+  "prev_sell": 18.804319
 },{
   "bank_id": 32,
   "bank_name": "BANORTE",
