commit from netcore service

--- a/indexDllIos.html
+++ b/indexDllIos.html
@@ -57,9 +57,9 @@
 },{
   "bank_id": 8,
   "bank_name": "BANSI",
-  "sell": 19.5615,
-  "buy": 19.015425,
-  "date": "2022-11-30 17:40:13",
+  "sell": 19.543275,
+  "buy": 18.985875,
+  "date": "2022-11-30 17:50:13",
   "prev_buy": 19.502775,
   "prev_sell": 18.958295
 },{
@@ -89,9 +89,9 @@
 },{
   "bank_id": 12,
   "bank_name": "FAMSA",
-  "sell": 19.7064,
-  "buy": 18.9189,
-  "date": "2022-11-30 17:40:15",
+  "sell": 19.68804,
+  "buy": 18.8895,
+  "date": "2022-11-30 17:50:15",
   "prev_buy": 19.64724,
   "prev_sell": 18.86206
 },{
@@ -108,16 +108,16 @@
   "sell": 20.33,
   "buy": 19.81,
   "date": "2022-11-30 16:50:17",
-  "prev_buy": 20.33,
-  "prev_sell": 19.81
+  "prev_buy": 20.22,
+  "prev_sell": 19.69
 },{
   "bank_id": 15,
   "bank_name": "BANJERCITO",
-  "sell": 19.7945,
-  "buy": 18.784,
-  "date": "2022-11-30 17:40:16",
-  "prev_buy": 19.732,
-  "prev_sell": 18.7215
+  "sell": 19.7893,
+  "buy": 18.7788,
+  "date": "2022-11-30 17:50:17",
+  "prev_buy": 19.7348,
+  "prev_sell": 18.7243
 },{
   "bank_id": 16,
   "bank_name": "BANREGIO",
@@ -161,89 +161,89 @@
 },{
   "bank_id": 21,
   "bank_name": "CIBANCO",
-  "sell": 19.62912,
-  "buy": 18.8127225,
-  "date": "2022-11-30 17:40:22",
+  "sell": 19.610832,
+  "buy": 18.7834875,
+  "date": "2022-11-30 17:50:21",
   "prev_buy": 19.570192,
   "prev_sell": 18.7562015
 },{
   "bank_id": 22,
   "bank_name": "COMPARTAMOS",
-  "sell": 19.66776,
-  "buy": 18.8513325,
-  "date": "2022-11-30 17:40:22",
+  "sell": 19.649436,
+  "buy": 18.8220375,
+  "date": "2022-11-30 17:50:22",
   "prev_buy": 19.608716,
   "prev_sell": 18.7946955
 },{
   "bank_id": 23,
   "bank_name": "BANCOPPEL",
-  "sell": 19.67742,
-  "buy": 18.6775875,
-  "date": "2022-11-30 17:40:23",
+  "sell": 19.659087,
+  "buy": 18.6485625,
+  "date": "2022-11-30 17:50:22",
   "prev_buy": 19.618347,
   "prev_sell": 18.6214725
 },{
   "bank_id": 24,
   "bank_name": "BANCREA",
-  "sell": 19.636848,
-  "buy": 18.872568,
-  "date": "2022-11-30 17:40:23",
+  "sell": 19.6185528,
+  "buy": 18.84324,
+  "date": "2022-11-30 17:50:23",
   "prev_buy": 19.5778968,
   "prev_sell": 18.8158672
 },{
   "bank_id": 25,
   "bank_name": "BANKAOOL",
-  "sell": 19.55184,
-  "buy": 18.68724,
-  "date": "2022-11-30 17:40:24",
+  "sell": 19.533624,
+  "buy": 18.6582,
+  "date": "2022-11-30 17:50:24",
   "prev_buy": 19.493144,
   "prev_sell": 18.631096
 },{
   "bank_id": 26,
   "bank_name": "BANSEFI",
-  "sell": 19.72572,
-  "buy": 18.474885,
-  "date": "2022-11-30 17:40:24",
+  "sell": 19.707342,
+  "buy": 18.446175,
+  "date": "2022-11-30 17:50:24",
   "prev_buy": 19.666502,
   "prev_sell": 18.419379
 },{
   "bank_id": 27,
   "bank_name": "BANCOFITERRA",
-  "sell": 19.68708,
-  "buy": 18.899595,
-  "date": "2022-11-30 17:40:25",
+  "sell": 19.668738,
+  "buy": 18.870225,
+  "date": "2022-11-30 17:50:25",
   "prev_buy": 19.627978,
   "prev_sell": 18.842813
 },{
   "bank_id": 28,
   "bank_name": "BANCAMIFEL",
-  "sell": 19.803,
-  "buy": 18.5328,
-  "date": "2022-11-30 17:40:25",
+  "sell": 19.78455,
+  "buy": 18.504,
+  "date": "2022-11-30 17:50:26",
   "prev_buy": 19.74355,
   "prev_sell": 18.47712
 },{
   "bank_id": 29,
   "bank_name": "AMERICAN EXPRESS",
-  "sell": 19.773054,
-  "buy": 18.8513325,
-  "date": "2022-11-30 17:40:25",
+  "sell": 19.7546319,
+  "buy": 18.8220375,
+  "date": "2022-11-30 17:50:27",
   "prev_buy": 19.7136939,
   "prev_sell": 18.7946955
 },{
   "bank_id": 30,
   "bank_name": "VISA",
-  "sell": 19.7547,
-  "buy": 18.8706375,
-  "date": "2022-11-30 17:40:26",
+  "sell": 19.736295,
+  "buy": 18.8413125,
+  "date": "2022-11-30 17:50:27",
   "prev_buy": 19.695395,
   "prev_sell": 18.8139425
 },{
   "bank_id": 31,
   "bank_name": "MASTERCARD",
-  "sell": 19.7547,
-  "buy": 18.860985,
-  "date": "2022-11-30 17:40:26",
+  "sell": 19.736295,
+  "buy": 18.831675,
+  "date": "2022-11-30 17:50:27",
   "prev_buy": 19.695395,
   "prev_sell": 18.804319
 },{
