--- a/indexRt.html
+++ b/indexRt.html
@@ -46071,6 +46071,10 @@
     {
       "Date": "2022-11-30 13:00",
       "Rate": "19.2899"
+    },
+    {
+      "Date": "2022-11-30 14:00",
+      "Rate": "19.2655"
     }
   ]
 }
