--- a/indexRt.html
+++ b/indexRt.html
@@ -46075,6 +46075,10 @@
     {
       "Date": "2022-11-30 14:00",
       "Rate": "19.2655"
+    },
+    {
+      "Date": "2022-11-30 15:00",
+      "Rate": "19.2721"
     }
   ]
 }
