--- a/indexRt.html
+++ b/indexRt.html
@@ -46079,6 +46079,10 @@
     {
       "Date": "2022-11-30 15:00",
       "Rate": "19.2721"
+    },
+    {
+      "Date": "2022-11-30 16:00",
+      "Rate": "19.2670"
     }
   ]
 }
