--- a/indexRt.html
+++ b/indexRt.html
@@ -46083,6 +46083,10 @@
     {
       "Date": "2022-11-30 16:00",
       "Rate": "19.2670"
+    },
+    {
+      "Date": "2022-11-30 17:00",
+      "Rate": "19.2675"
     }
   ]
 }
