commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -46087,6 +46087,10 @@
     {
       "Date": "2022-11-30 17:00",
       "Rate": "19.2675"
+    },
+    {
+      "Date": "2022-11-30 18:00",
+      "Rate": "19.2602"
     }
   ]
 }
