--- a/indexRt.html
+++ b/indexRt.html
@@ -46091,6 +46091,10 @@
     {
       "Date": "2022-11-30 18:00",
       "Rate": "19.2602"
+    },
+    {
+      "Date": "2022-11-30 19:00",
+      "Rate": "19.2757"
     }
   ]
 }
