commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -46095,6 +46095,10 @@
     {
       "Date": "2022-11-30 19:00",
       "Rate": "19.2757"
+    },
+    {
+      "Date": "2022-11-30 20:00",
+      "Rate": "19.2574"
     }
   ]
 }
