--- a/indexRt.html
+++ b/indexRt.html
@@ -46099,6 +46099,10 @@
     {
       "Date": "2022-11-30 20:00",
       "Rate": "19.2574"
+    },
+    {
+      "Date": "2022-11-30 21:00",
+      "Rate": "19.2595"
     }
   ]
 }
