commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -46103,6 +46103,10 @@
     {
       "Date": "2022-11-30 21:00",
       "Rate": "19.2595"
+    },
+    {
+      "Date": "2022-11-30 22:00",
+      "Rate": "19.2454"
     }
   ]
 }
