--- a/indexRt.html
+++ b/indexRt.html
@@ -46107,6 +46107,10 @@
     {
       "Date": "2022-11-30 22:00",
       "Rate": "19.2454"
+    },
+    {
+      "Date": "2022-11-30 23:00",
+      "Rate": "19.2426"
     }
   ]
 }
