commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -46111,6 +46111,10 @@
     {
       "Date": "2022-11-30 23:00",
       "Rate": "19.2426"
+    },
+    {
+      "Date": "2022-12-01 00:00",
+      "Rate": "19.2973"
     }
   ]
 }
