commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -46115,6 +46115,10 @@
     {
       "Date": "2022-12-01 00:00",
       "Rate": "19.2973"
+    },
+    {
+      "Date": "2022-12-01 01:00",
+      "Rate": "19.2662"
     }
   ]
 }
