commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -46119,6 +46119,10 @@
     {
       "Date": "2022-12-01 01:00",
       "Rate": "19.2662"
+    },
+    {
+      "Date": "2022-12-01 02:00",
+      "Rate": "19.2713"
     }
   ]
 }
