commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -46123,6 +46123,10 @@
     {
       "Date": "2022-12-01 02:00",
       "Rate": "19.2713"
+    },
+    {
+      "Date": "2022-12-01 03:00",
+      "Rate": "19.2580"
     }
   ]
 }
