commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -46127,6 +46127,10 @@
     {
       "Date": "2022-12-01 03:00",
       "Rate": "19.2580"
+    },
+    {
+      "Date": "2022-12-01 04:00",
+      "Rate": "19.2576"
     }
   ]
 }
