commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -46131,6 +46131,10 @@
     {
       "Date": "2022-12-01 04:00",
       "Rate": "19.2576"
+    },
+    {
+      "Date": "2022-12-01 05:00",
+      "Rate": "19.2920"
     }
   ]
 }
