commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -46135,6 +46135,10 @@
     {
       "Date": "2022-12-01 05:00",
       "Rate": "19.2920"
+    },
+    {
+      "Date": "2022-12-01 06:00",
+      "Rate": "19.2515"
     }
   ]
 }
