--- a/indexDllIos.html
+++ b/indexDllIos.html
@@ -33,11 +33,11 @@
 },{
   "bank_id": 5,
   "bank_name": "SCOTIABANK",
-  "sell": 19.6163825,
-  "buy": 18.8846,
-  "date": "2022-12-01 09:40:11",
-  "prev_buy": 19.6285925,
-  "prev_sell": 18.89636
+  "sell": 19.59043625,
+  "buy": 18.858532,
+  "date": "2022-12-01 09:50:11",
+  "prev_buy": 19.633273,
+  "prev_sell": 18.90567
 },{
   "bank_id": 6,
   "bank_name": "BANXICO",
@@ -57,11 +57,11 @@
 },{
   "bank_id": 8,
   "bank_name": "BANSI",
-  "sell": 19.5199875,
-  "buy": 18.98095,
-  "date": "2022-12-01 09:40:13",
-  "prev_buy": 19.5321375,
-  "prev_sell": 18.99277
+  "sell": 19.49416875,
+  "buy": 18.954749,
+  "date": "2022-12-01 09:50:13",
+  "prev_buy": 19.536795,
+  "prev_sell": 19.0021275
 },{
   "bank_id": 9,
   "bank_name": "BAJIO",
@@ -89,11 +89,11 @@
 },{
   "bank_id": 12,
   "bank_name": "FAMSA",
-  "sell": 19.66458,
-  "buy": 18.8846,
-  "date": "2022-12-01 09:40:15",
-  "prev_buy": 19.67682,
-  "prev_sell": 18.89636
+  "sell": 19.63857,
+  "buy": 18.858532,
+  "date": "2022-12-01 09:50:16",
+  "prev_buy": 19.681512,
+  "prev_sell": 18.90567
 },{
   "bank_id": 13,
   "bank_name": "BANCOAZTECA",
@@ -108,16 +108,16 @@
   "sell": 20.22,
   "buy": 19.69,
   "date": "2022-12-01 09:40:16",
-  "prev_buy": 20.22,
-  "prev_sell": 19.69
+  "prev_buy": 20.33,
+  "prev_sell": 19.81
 },{
   "bank_id": 15,
   "bank_name": "BANJERCITO",
-  "sell": 19.776,
-  "buy": 18.743,
-  "date": "2022-12-01 09:40:16",
-  "prev_buy": 19.7865,
-  "prev_sell": 18.771
+  "sell": 19.7622,
+  "buy": 18.7517,
+  "date": "2022-12-01 09:50:18",
+  "prev_buy": 19.8049,
+  "prev_sell": 18.7944
 },{
   "bank_id": 16,
   "bank_name": "BANREGIO",
@@ -161,91 +161,91 @@
 },{
   "bank_id": 21,
   "bank_name": "CIBANCO",
-  "sell": 19.587464,
-  "buy": 18.778615,
-  "date": "2022-12-01 09:40:21",
-  "prev_buy": 19.599656,
-  "prev_sell": 18.790309
+  "sell": 19.561556,
+  "buy": 18.7526933,
+  "date": "2022-12-01 09:50:25",
+  "prev_buy": 19.6043296,
+  "prev_sell": 18.79956675
 },{
   "bank_id": 22,
   "bank_name": "COMPARTAMOS",
-  "sell": 19.626022,
-  "buy": 18.817155,
-  "date": "2022-12-01 09:40:21",
-  "prev_buy": 19.638238,
-  "prev_sell": 18.828873
+  "sell": 19.600063,
+  "buy": 18.7911801,
+  "date": "2022-12-01 09:50:26",
+  "prev_buy": 19.6429208,
+  "prev_sell": 18.83814975
 },{
   "bank_id": 23,
   "bank_name": "BANCOPPEL",
-  "sell": 19.6356615,
-  "buy": 18.643725,
-  "date": "2022-12-01 09:40:21",
-  "prev_buy": 19.6478835,
-  "prev_sell": 18.655335
+  "sell": 19.60968975,
+  "buy": 18.6179895,
+  "date": "2022-12-01 09:50:26",
+  "prev_buy": 19.6525686,
+  "prev_sell": 18.66452625
 },{
   "bank_id": 24,
   "bank_name": "BANCREA",
-  "sell": 19.5951756,
-  "buy": 18.838352,
-  "date": "2022-12-01 09:40:22",
-  "prev_buy": 19.6073724,
-  "prev_sell": 18.8500832
+  "sell": 19.5692574,
+  "buy": 18.81234784,
+  "date": "2022-12-01 09:50:26",
+  "prev_buy": 19.61204784,
+  "prev_sell": 18.8593704
 },{
   "bank_id": 25,
   "bank_name": "BANKAOOL",
-  "sell": 19.510348,
-  "buy": 18.65336,
-  "date": "2022-12-01 09:40:23",
-  "prev_buy": 19.522492,
-  "prev_sell": 18.664976
+  "sell": 19.484542,
+  "buy": 18.6276112,
+  "date": "2022-12-01 09:50:27",
+  "prev_buy": 19.5271472,
+  "prev_sell": 18.674172
 },{
   "bank_id": 26,
   "bank_name": "BANSEFI",
-  "sell": 19.683859,
-  "buy": 18.44139,
-  "date": "2022-12-01 09:40:23",
-  "prev_buy": 19.696111,
-  "prev_sell": 18.452874
+  "sell": 19.6578235,
+  "buy": 18.4159338,
+  "date": "2022-12-01 09:50:28",
+  "prev_buy": 19.7008076,
+  "prev_sell": 18.4619655
 },{
   "bank_id": 27,
   "bank_name": "BANCOFITERRA",
-  "sell": 19.645301,
-  "buy": 18.86533,
-  "date": "2022-12-01 09:40:24",
-  "prev_buy": 19.657529,
-  "prev_sell": 18.877078
+  "sell": 19.6193165,
+  "buy": 18.8392886,
+  "date": "2022-12-01 09:50:28",
+  "prev_buy": 19.6622164,
+  "prev_sell": 18.8863785
 },{
   "bank_id": 28,
   "bank_name": "BANCAMIFEL",
-  "sell": 19.760975,
-  "buy": 18.4992,
-  "date": "2022-12-01 09:40:24",
-  "prev_buy": 19.773275,
-  "prev_sell": 18.51072
+  "sell": 19.7348375,
+  "buy": 18.473664,
+  "date": "2022-12-01 09:50:29",
+  "prev_buy": 19.77799,
+  "prev_sell": 18.51984
 },{
   "bank_id": 29,
   "bank_name": "AMERICAN EXPRESS",
-  "sell": 19.73109255,
-  "buy": 18.817155,
-  "date": "2022-12-01 09:40:25",
-  "prev_buy": 19.74337395,
-  "prev_sell": 18.828873
+  "sell": 19.70499458,
+  "buy": 18.7911801,
+  "date": "2022-12-01 09:50:30",
+  "prev_buy": 19.74808182,
+  "prev_sell": 18.83814975
 },{
   "bank_id": 30,
   "bank_name": "VISA",
-  "sell": 19.7127775,
-  "buy": 18.836425,
-  "date": "2022-12-01 09:40:25",
-  "prev_buy": 19.7250475,
-  "prev_sell": 18.848155
+  "sell": 19.68670375,
+  "buy": 18.8104235,
+  "date": "2022-12-01 09:50:30",
+  "prev_buy": 19.729751,
+  "prev_sell": 18.85744125
 },{
   "bank_id": 31,
   "bank_name": "MASTERCARD",
-  "sell": 19.7127775,
-  "buy": 18.82679,
-  "date": "2022-12-01 09:40:26",
-  "prev_buy": 19.7250475,
-  "prev_sell": 18.838514
+  "sell": 19.68670375,
+  "buy": 18.8008018,
+  "date": "2022-12-01 09:50:31",
+  "prev_buy": 19.729751,
+  "prev_sell": 18.8477955
 },{
   "bank_id": 32,
   "bank_name": "BANORTE",
