--- a/indexRt.html
+++ b/indexRt.html
@@ -46139,6 +46139,10 @@
     {
       "Date": "2022-12-01 06:00",
       "Rate": "19.2515"
+    },
+    {
+      "Date": "2022-12-01 07:00",
+      "Rate": "19.1405"
     }
   ]
 }
