commit from netcore service

--- a/indexDllIos.html
+++ b/indexDllIos.html
@@ -4,16 +4,16 @@
   "sell": 19.8,
   "buy": 18.4,
   "date": "2022-12-01 10:30:08",
-  "prev_buy": 19.8,
-  "prev_sell": 18.4
+  "prev_buy": 19.9,
+  "prev_sell": 18.5
 },{
   "bank_id": 2,
   "bank_name": "BANAMEX",
   "sell": 19.65,
   "buy": 18.58,
   "date": "2022-12-01 10:40:08",
-  "prev_buy": 19.79,
-  "prev_sell": 18.65
+  "prev_buy": 19.83,
+  "prev_sell": 18.76
 },{
   "bank_id": 3,
   "bank_name": "SANTANDER",
@@ -33,11 +33,11 @@
 },{
   "bank_id": 5,
   "bank_name": "SCOTIABANK",
-  "sell": 19.52653725,
-  "buy": 18.79934,
-  "date": "2022-12-01 10:50:11",
-  "prev_buy": 19.62788025,
-  "prev_sell": 18.903808
+  "sell": 19.4845145,
+  "buy": 18.757788,
+  "date": "2022-12-01 11:10:10",
+  "prev_buy": 19.664612,
+  "prev_sell": 18.938108
 },{
   "bank_id": 6,
   "bank_name": "BANXICO",
@@ -49,19 +49,19 @@
 },{
   "bank_id": 7,
   "bank_name": "IXE",
-  "sell": 19.6,
-  "buy": 18.2,
-  "date": "2022-11-30 16:00:14",
+  "sell": 19.5,
+  "buy": 18.1,
+  "date": "2022-12-01 11:10:12",
   "prev_buy": 19.55,
   "prev_sell": 18.15
 },{
   "bank_id": 8,
   "bank_name": "BANSI",
-  "sell": 19.42572375,
-  "buy": 18.8888525,
-  "date": "2022-12-01 10:50:13",
-  "prev_buy": 19.53234,
-  "prev_sell": 19.00065
+  "sell": 19.39069125,
+  "buy": 18.852112,
+  "date": "2022-12-01 11:10:13",
+  "prev_buy": 19.56798,
+  "prev_sell": 19.034731
 },{
   "bank_id": 9,
   "bank_name": "BAJIO",
@@ -89,11 +89,11 @@
 },{
   "bank_id": 12,
   "bank_name": "FAMSA",
-  "sell": 19.569618,
-  "buy": 18.79297,
-  "date": "2022-12-01 10:50:15",
-  "prev_buy": 19.677024,
-  "prev_sell": 18.9042
+  "sell": 19.534326,
+  "buy": 18.756416,
+  "date": "2022-12-01 11:10:14",
+  "prev_buy": 19.712928,
+  "prev_sell": 18.938108
 },{
   "bank_id": 13,
   "bank_name": "BANCOAZTECA",
@@ -105,19 +105,19 @@
 },{
   "bank_id": 14,
   "bank_name": "MONEX",
-  "sell": 20.22,
-  "buy": 19.69,
-  "date": "2022-12-01 10:50:16",
+  "sell": 20.33,
+  "buy": 19.81,
+  "date": "2022-12-01 11:10:15",
   "prev_buy": 20.22,
   "prev_sell": 19.69
 },{
   "bank_id": 15,
   "bank_name": "BANJERCITO",
-  "sell": 19.6772,
-  "buy": 18.6667,
-  "date": "2022-12-01 10:50:17",
-  "prev_buy": 19.8176,
-  "prev_sell": 18.8071
+  "sell": 19.665,
+  "buy": 18.63,
+  "date": "2022-12-01 11:10:16",
+  "prev_buy": 19.8447,
+  "prev_sell": 18.8342
 },{
   "bank_id": 16,
   "bank_name": "BANREGIO",
@@ -161,97 +161,97 @@
 },{
   "bank_id": 21,
   "bank_name": "CIBANCO",
-  "sell": 19.4928744,
-  "buy": 18.68749925,
-  "date": "2022-12-01 10:50:22",
-  "prev_buy": 19.5998592,
-  "prev_sell": 18.798105
+  "sell": 19.4577208,
+  "buy": 18.6511504,
+  "date": "2022-12-01 11:10:20",
+  "prev_buy": 19.6389752,
+  "prev_sell": 18.8355258
 },{
   "bank_id": 22,
   "bank_name": "COMPARTAMOS",
-  "sell": 19.5312462,
-  "buy": 18.72585225,
-  "date": "2022-12-01 10:50:23",
-  "prev_buy": 19.6384416,
-  "prev_sell": 18.836685
+  "sell": 19.4960234,
+  "buy": 18.6894288,
+  "date": "2022-12-01 11:10:21",
+  "prev_buy": 19.6776346,
+  "prev_sell": 18.8741826
 },{
   "bank_id": 23,
   "bank_name": "BANCOPPEL",
-  "sell": 19.54083915,
-  "buy": 18.55326375,
-  "date": "2022-12-01 10:50:24",
-  "prev_buy": 19.6480872,
-  "prev_sell": 18.663075
+  "sell": 19.50559905,
+  "buy": 18.517176,
+  "date": "2022-12-01 11:10:21",
+  "prev_buy": 19.68729945,
+  "prev_sell": 18.700227
 },{
   "bank_id": 24,
   "bank_name": "BANCREA",
-  "sell": 19.50054876,
-  "buy": 18.7469464,
-  "date": "2022-12-01 10:50:24",
-  "prev_buy": 19.60757568,
-  "prev_sell": 18.857904
+  "sell": 19.46538132,
+  "buy": 18.71048192,
+  "date": "2022-12-01 11:10:22",
+  "prev_buy": 19.64670708,
+  "prev_sell": 18.89544384
 },{
   "bank_id": 25,
   "bank_name": "BANKAOOL",
-  "sell": 19.4161308,
-  "buy": 18.562852,
-  "date": "2022-12-01 10:50:25",
-  "prev_buy": 19.5226944,
-  "prev_sell": 18.67272
+  "sell": 19.3811156,
+  "buy": 18.5267456,
+  "date": "2022-12-01 11:10:22",
+  "prev_buy": 19.5616564,
+  "prev_sell": 18.7098912
 },{
   "bank_id": 26,
   "bank_name": "BANSEFI",
-  "sell": 19.5888039,
-  "buy": 18.3519105,
-  "date": "2022-12-01 10:50:25",
-  "prev_buy": 19.6963152,
-  "prev_sell": 18.46053
+  "sell": 19.5534773,
+  "buy": 18.3162144,
+  "date": "2022-12-01 11:10:23",
+  "prev_buy": 19.7356237,
+  "prev_sell": 18.4972788
 },{
   "bank_id": 27,
   "bank_name": "BANCOFITERRA",
-  "sell": 19.5504321,
-  "buy": 18.7737935,
-  "date": "2022-12-01 10:50:26",
-  "prev_buy": 19.6577328,
-  "prev_sell": 18.88491
+  "sell": 19.5151747,
+  "buy": 18.7372768,
+  "date": "2022-12-01 11:10:23",
+  "prev_buy": 19.6969643,
+  "prev_sell": 18.9225036
 },{
   "bank_id": 28,
   "bank_name": "BANCAMIFEL",
-  "sell": 19.6655475,
-  "buy": 18.40944,
-  "date": "2022-12-01 10:50:26",
-  "prev_buy": 19.77348,
-  "prev_sell": 18.5184
+  "sell": 19.6300825,
+  "buy": 18.373632,
+  "date": "2022-12-01 11:10:24",
+  "prev_buy": 19.8129425,
+  "prev_sell": 18.555264
 },{
   "bank_id": 29,
   "bank_name": "AMERICAN EXPRESS",
-  "sell": 19.63580936,
-  "buy": 18.72585225,
-  "date": "2022-12-01 10:50:27",
-  "prev_buy": 19.74357864,
-  "prev_sell": 18.836685
+  "sell": 19.60039799,
+  "buy": 18.6894288,
+  "date": "2022-12-01 11:10:24",
+  "prev_buy": 19.78298147,
+  "prev_sell": 18.8741826
 },{
   "bank_id": 30,
   "bank_name": "VISA",
-  "sell": 19.61758275,
-  "buy": 18.74502875,
-  "date": "2022-12-01 10:50:28",
-  "prev_buy": 19.725252,
-  "prev_sell": 18.855975
+  "sell": 19.58220425,
+  "buy": 18.708568,
+  "date": "2022-12-01 11:10:24",
+  "prev_buy": 19.76461825,
+  "prev_sell": 18.893511
 },{
   "bank_id": 31,
   "bank_name": "MASTERCARD",
-  "sell": 19.61758275,
-  "buy": 18.7354405,
-  "date": "2022-12-01 10:50:28",
-  "prev_buy": 19.725252,
-  "prev_sell": 18.84633
+  "sell": 19.58220425,
+  "buy": 18.6989984,
+  "date": "2022-12-01 11:10:25",
+  "prev_buy": 19.76461825,
+  "prev_sell": 18.8838468
 },{
   "bank_id": 32,
   "bank_name": "BANORTE",
-  "sell": 19.6,
-  "buy": 18.2,
-  "date": "2022-11-30 16:00:34",
+  "sell": 19.5,
+  "buy": 18.1,
+  "date": "2022-12-01 11:00:25",
   "prev_buy": 19.55,
   "prev_sell": 18.15
 },{
