commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -46143,6 +46143,10 @@
     {
       "Date": "2022-12-01 07:00",
       "Rate": "19.1405"
+    },
+    {
+      "Date": "2022-12-01 08:00",
+      "Rate": "19.1466"
     }
   ]
 }
