commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -46147,6 +46147,10 @@
     {
       "Date": "2022-12-01 08:00",
       "Rate": "19.1466"
+    },
+    {
+      "Date": "2022-12-01 09:00",
+      "Rate": "19.1525"
     }
   ]
 }
