--- a/indexDllIos.html
+++ b/indexDllIos.html
@@ -1,17 +1,9 @@
 {"banks":[{
-  "bank_id": 1,
-  "bank_name": "",
-  "sell": 19.8,
-  "buy": 18.4,
-  "date": "2022-12-01 10:30:08",
-  "prev_buy": 20,
-  "prev_sell": 18.6
-},{
   "bank_id": 2,
   "bank_name": "BANAMEX",
   "sell": 19.65,
   "buy": 18.58,
-  "date": "2022-12-01 10:40:08",
+  "date": "2022-12-0110:40:08",
   "prev_buy": 19.89,
   "prev_sell": 18.82
 },{
@@ -19,7 +11,7 @@
   "bank_name": "SANTANDER",
   "sell": 21.06168,
   "buy": 19.53255,
-  "date": "2022-05-02 17:10:09",
+  "date": "2022-05-0217:10:09",
   "prev_buy": 21.06168,
   "prev_sell": 19.53255
 },{
@@ -27,7 +19,7 @@
   "bank_name": "HSBC",
   "sell": 19.74,
   "buy": 19.01,
-  "date": "2022-11-18 12:40:10",
+  "date": "2022-11-1812:40:10",
   "prev_buy": 19.74,
   "prev_sell": 19.01
 },{
@@ -35,7 +27,7 @@
   "bank_name": "SCOTIABANK",
   "sell": 19.49295975,
   "buy": 18.764256,
-  "date": "2022-12-01 13:20:10",
+  "date": "2022-12-0113:20:10",
   "prev_buy": 19.7075505,
   "prev_sell": 18.97966
 },{
@@ -43,7 +35,7 @@
   "bank_name": "BANXICO",
   "sell": "19.2750",
   "buy": "19.4620",
-  "date": "2021-10-29 14:40:06",
+  "date": "2021-10-2914:40:06",
   "prev_buy": 20.609,
   "prev_sell": 20.6025
 },{
@@ -51,7 +43,7 @@
   "bank_name": "IXE",
   "sell": 19.45,
   "buy": 18.05,
-  "date": "2022-12-01 11:30:14",
+  "date": "2022-12-0111:30:14",
   "prev_buy": 19.65,
   "prev_sell": 18.25
 },{
@@ -59,7 +51,7 @@
   "bank_name": "BANSI",
   "sell": 19.39717125,
   "buy": 18.859992,
-  "date": "2022-12-01 13:20:12",
+  "date": "2022-12-0113:20:12",
   "prev_buy": 19.6107075,
   "prev_sell": 19.076495
 },{
@@ -67,7 +59,7 @@
   "bank_name": "BAJIO",
   "sell": 20.7,
   "buy": 19.6,
-  "date": "2022-09-06 11:40:12",
+  "date": "2022-09-0611:40:12",
   "prev_buy": 20.7,
   "prev_sell": 19.6
 },{
@@ -75,7 +67,7 @@
   "bank_name": "BANCOMER",
   "sell": 20.73,
   "buy": 19.83,
-  "date": "2022-05-02 17:10:13",
+  "date": "2022-05-0217:10:13",
   "prev_buy": 20.73,
   "prev_sell": 19.83
 },{
@@ -83,7 +75,7 @@
   "bank_name": "BXMAS",
   "sell": 20.59,
   "buy": 20.05,
-  "date": "2022-03-09 15:30:15",
+  "date": "2022-03-0915:30:15",
   "prev_buy": 20.59,
   "prev_sell": 20.05
 },{
@@ -91,7 +83,7 @@
   "bank_name": "FAMSA",
   "sell": 19.539222,
   "buy": 18.766314,
-  "date": "2022-12-01 13:20:14",
+  "date": "2022-12-0113:20:14",
   "prev_buy": 19.755972,
   "prev_sell": 18.97966
 },{
@@ -99,7 +91,7 @@
   "bank_name": "BANCOAZTECA",
   "sell": 20.89,
   "buy": 20.15,
-  "date": "2022-03-09 15:20:17",
+  "date": "2022-03-0915:20:17",
   "prev_buy": 20.89,
   "prev_sell": 20.15
 },{
@@ -107,7 +99,7 @@
   "bank_name": "MONEX",
   "sell": 20.22,
   "buy": 19.69,
-  "date": "2022-12-01 13:10:16",
+  "date": "2022-12-0113:10:16",
   "prev_buy": 20.33,
   "prev_sell": 19.81
 },{
@@ -115,7 +107,7 @@
   "bank_name": "BANJERCITO",
   "sell": 19.6904,
   "buy": 18.6799,
-  "date": "2022-12-01 13:20:16",
+  "date": "2022-12-0113:20:16",
   "prev_buy": 19.874,
   "prev_sell": 18.8635
 },{
@@ -123,7 +115,7 @@
   "bank_name": "BANREGIO",
   "sell": 20.7,
   "buy": 19.2,
-  "date": "2022-10-12 10:00:16",
+  "date": "2022-10-1210:00:16",
   "prev_buy": 20.7,
   "prev_sell": 19.2
 },{
@@ -131,7 +123,7 @@
   "bank_name": "DOF",
   "sell": " 19.3965",
   "buy": " 19.3965",
-  "date": "2022-06-03 07:10:28",
+  "date": "2022-06-0307:10:28",
   "prev_buy": 19.5585,
   "prev_sell": 19.5585
 },{
@@ -139,7 +131,7 @@
   "bank_name": "INBURSA",
   "sell": 19.8,
   "buy": 18.8,
-  "date": "2022-12-01 13:20:19",
+  "date": "2022-12-0113:20:19",
   "prev_buy": 19.9,
   "prev_sell": 18.9
 },{
@@ -147,7 +139,7 @@
   "bank_name": "BANCOBASE",
   "sell": 20.87,
   "buy": 20.14,
-  "date": "2022-03-09 15:20:22",
+  "date": "2022-03-0915:20:22",
   "prev_buy": 20.87,
   "prev_sell": 20.14
 },{
@@ -155,7 +147,7 @@
   "bank_name": "SAT",
   "sell": " 19.3965",
   "buy": " 19.3965",
-  "date": "2022-12-01 02:10:19",
+  "date": "2022-12-0102:10:19",
   "prev_buy": 19.216,
   "prev_sell": 19.216
 },{
@@ -163,7 +155,7 @@
   "bank_name": "CIBANCO",
   "sell": 19.4625976,
   "buy": 18.66099285,
-  "date": "2022-12-01 13:20:21",
+  "date": "2022-12-0113:20:21",
   "prev_buy": 19.6784976,
   "prev_sell": 18.8731415
 },{
@@ -171,7 +163,7 @@
   "bank_name": "COMPARTAMOS",
   "sell": 19.5009098,
   "buy": 18.69929145,
-  "date": "2022-12-01 13:20:22",
+  "date": "2022-12-0113:20:22",
   "prev_buy": 19.7172348,
   "prev_sell": 18.9118755
 },{
@@ -179,7 +171,7 @@
   "bank_name": "BANCOPPEL",
   "sell": 19.51048785,
   "buy": 18.52694775,
-  "date": "2022-12-01 13:20:23",
+  "date": "2022-12-0113:20:23",
   "prev_buy": 19.7269191,
   "prev_sell": 18.7375725
 },{
@@ -187,7 +179,7 @@
   "bank_name": "BANCREA",
   "sell": 19.47026004,
   "buy": 18.72035568,
-  "date": "2022-12-01 13:20:23",
+  "date": "2022-12-0113:20:23",
   "prev_buy": 19.68624504,
   "prev_sell": 18.9331792
 },{
@@ -195,7 +187,7 @@
   "bank_name": "BANKAOOL",
   "sell": 19.3859732,
   "buy": 18.5365224,
-  "date": "2022-12-01 13:20:23",
+  "date": "2022-12-0113:20:23",
   "prev_buy": 19.6010232,
   "prev_sell": 18.747256
 },{
@@ -203,7 +195,7 @@
   "bank_name": "BANSEFI",
   "sell": 19.5583781,
   "buy": 18.3258801,
-  "date": "2022-12-01 13:20:24",
+  "date": "2022-12-0113:20:24",
   "prev_buy": 19.7753406,
   "prev_sell": 18.534219
 },{
@@ -211,7 +203,7 @@
   "bank_name": "BANCOFITERRA",
   "sell": 19.5200659,
   "buy": 18.7471647,
-  "date": "2022-12-01 13:20:25",
+  "date": "2022-12-0113:20:25",
   "prev_buy": 19.7366034,
   "prev_sell": 18.960293
 },{
@@ -219,15 +211,15 @@
   "bank_name": "BANCAMIFEL",
   "sell": 19.6350025,
   "buy": 18.383328,
-  "date": "2022-12-01 13:20:25",
+  "date": "2022-12-0113:20:25",
   "prev_buy": 19.852815,
   "prev_sell": 18.59232
 },{
   "bank_id": 29,
-  "bank_name": "AMERICAN EXPRESS",
+  "bank_name": "AMERICANEXPRESS",
   "sell": 19.60531055,
   "buy": 18.69929145,
-  "date": "2022-12-01 13:20:26",
+  "date": "2022-12-0113:20:26",
   "prev_buy": 19.82279367,
   "prev_sell": 18.9118755
 },{
@@ -235,7 +227,7 @@
   "bank_name": "VISA",
   "sell": 19.58711225,
   "buy": 18.71844075,
-  "date": "2022-12-01 13:20:26",
+  "date": "2022-12-0113:20:26",
   "prev_buy": 19.8043935,
   "prev_sell": 18.9312425
 },{
@@ -243,7 +235,7 @@
   "bank_name": "MASTERCARD",
   "sell": 19.58711225,
   "buy": 18.7088661,
-  "date": "2022-12-01 13:20:26",
+  "date": "2022-12-0113:20:26",
   "prev_buy": 19.8043935,
   "prev_sell": 18.921559
 },{
@@ -251,23 +243,7 @@
   "bank_name": "BANORTE",
   "sell": 19.45,
   "buy": 18.05,
-  "date": "2022-12-01 11:30:49",
+  "date": "2022-12-0111:30:49",
   "prev_buy": 19.65,
   "prev_sell": 18.25
-},{
-  "bank_id": 33,
-  "bank_name": "",
-  "sell": 20.4552,
-  "buy": 19.452999,
-  "date": "2021-09-07 16:50:20",
-  "prev_buy": 20.4552,
-  "prev_sell": 19.452999
-},{
-  "bank_id": 34,
-  "bank_name": "",
-  "sell": 20.9568,
-  "buy": 19.9632,
-  "date": "2021-09-30 10:00:17",
-  "prev_buy": 20.9568,
-  "prev_sell": 19.9632
 }]}
