--- a/indexRt.html
+++ b/indexRt.html
@@ -46151,6 +46151,10 @@
     {
       "Date": "2022-12-01 09:00",
       "Rate": "19.1525"
+    },
+    {
+      "Date": "2022-12-01 10:00",
+      "Rate": "19.1715"
     }
   ]
 }
