commit from netcore service

--- a/indexDllIos.html
+++ b/indexDllIos.html
@@ -12,8 +12,8 @@
   "sell": 19.65,
   "buy": 18.58,
   "date": "2022-12-01 10:40:08",
-  "prev_buy": 19.89,
-  "prev_sell": 18.82
+  "prev_buy": 19.83,
+  "prev_sell": 18.76
 },{
   "bank_id": 3,
   "bank_name": "SANTANDER",
@@ -33,11 +33,11 @@
 },{
   "bank_id": 5,
   "bank_name": "SCOTIABANK",
-  "sell": 19.50679775,
-  "buy": 18.780818,
-  "date": "2022-12-01 14:20:10",
-  "prev_buy": 19.70378575,
-  "prev_sell": 18.975936
+  "sell": 19.50598375,
+  "buy": 18.780328,
+  "date": "2022-12-01 14:40:11",
+  "prev_buy": 19.72291475,
+  "prev_sell": 18.993772
 },{
   "bank_id": 6,
   "bank_name": "BANXICO",
@@ -57,11 +57,11 @@
 },{
   "bank_id": 8,
   "bank_name": "BANSI",
-  "sell": 19.41094125,
-  "buy": 18.8766385,
-  "date": "2022-12-01 14:20:13",
-  "prev_buy": 19.61496,
-  "prev_sell": 19.07945
+  "sell": 19.41013125,
+  "buy": 18.876146,
+  "date": "2022-12-01 14:40:14",
+  "prev_buy": 19.62599625,
+  "prev_sell": 19.090679
 },{
   "bank_id": 9,
   "bank_name": "BAJIO",
@@ -89,11 +89,11 @@
 },{
   "bank_id": 12,
   "bank_name": "FAMSA",
-  "sell": 19.554726,
-  "buy": 18.780818,
-  "date": "2022-12-01 14:20:15",
-  "prev_buy": 19.760256,
-  "prev_sell": 18.9826
+  "sell": 19.55391,
+  "buy": 18.780328,
+  "date": "2022-12-01 14:40:16",
+  "prev_buy": 19.771374,
+  "prev_sell": 18.993772
 },{
   "bank_id": 13,
   "bank_name": "BANCOAZTECA",
@@ -113,11 +113,11 @@
 },{
   "bank_id": 15,
   "bank_name": "BANJERCITO",
-  "sell": 19.6647,
-  "buy": 18.6542,
-  "date": "2022-12-01 14:20:17",
-  "prev_buy": 19.8733,
-  "prev_sell": 18.8628
+  "sell": 19.6855,
+  "buy": 18.675,
+  "date": "2022-12-01 14:40:18",
+  "prev_buy": 19.9105,
+  "prev_sell": 18.9
 },{
   "bank_id": 16,
   "bank_name": "BANREGIO",
@@ -161,91 +161,91 @@
 },{
   "bank_id": 21,
   "bank_name": "CIBANCO",
-  "sell": 19.4780408,
-  "buy": 18.67541545,
-  "date": "2022-12-01 14:20:22",
-  "prev_buy": 19.6827648,
-  "prev_sell": 18.876065
+  "sell": 19.477228,
+  "buy": 18.6749282,
+  "date": "2022-12-01 14:40:26",
+  "prev_buy": 19.6938392,
+  "prev_sell": 18.8871743
 },{
   "bank_id": 22,
   "bank_name": "COMPARTAMOS",
-  "sell": 19.5163834,
-  "buy": 18.71374365,
-  "date": "2022-12-01 14:20:22",
-  "prev_buy": 19.7215104,
-  "prev_sell": 18.914805
+  "sell": 19.515569,
+  "buy": 18.7132554,
+  "date": "2022-12-01 14:40:27",
+  "prev_buy": 19.7326066,
+  "prev_sell": 18.9259371
 },{
   "bank_id": 23,
   "bank_name": "BANCOPPEL",
-  "sell": 19.52596905,
-  "buy": 18.54126675,
-  "date": "2022-12-01 14:20:22",
-  "prev_buy": 19.7311968,
-  "prev_sell": 18.740475
+  "sell": 19.52515425,
+  "buy": 18.540783,
+  "date": "2022-12-01 14:40:27",
+  "prev_buy": 19.74229845,
+  "prev_sell": 18.7515045
 },{
   "bank_id": 24,
   "bank_name": "BANCREA",
-  "sell": 19.48570932,
-  "buy": 18.73482416,
-  "date": "2022-12-01 14:20:23",
-  "prev_buy": 19.69051392,
-  "prev_sell": 18.936112
+  "sell": 19.4848962,
+  "buy": 18.73433536,
+  "date": "2022-12-01 14:40:28",
+  "prev_buy": 19.70159268,
+  "prev_sell": 18.94725664
 },{
   "bank_id": 25,
   "bank_name": "BANKAOOL",
-  "sell": 19.4013556,
-  "buy": 18.5508488,
-  "date": "2022-12-01 14:20:23",
-  "prev_buy": 19.6052736,
-  "prev_sell": 18.75016
+  "sell": 19.400546,
+  "buy": 18.5503648,
+  "date": "2022-12-01 14:40:28",
+  "prev_buy": 19.6163044,
+  "prev_sell": 18.7611952
 },{
   "bank_id": 26,
   "bank_name": "BANSEFI",
-  "sell": 19.5738973,
-  "buy": 18.3400437,
-  "date": "2022-12-01 14:20:24",
-  "prev_buy": 19.7796288,
-  "prev_sell": 18.53709
+  "sell": 19.5730805,
+  "buy": 18.3395652,
+  "date": "2022-12-01 14:40:29",
+  "prev_buy": 19.7907577,
+  "prev_sell": 18.5479998
 },{
   "bank_id": 27,
   "bank_name": "BANCOFITERRA",
-  "sell": 19.5355547,
-  "buy": 18.7616539,
-  "date": "2022-12-01 14:20:24",
-  "prev_buy": 19.7408832,
-  "prev_sell": 18.96323
+  "sell": 19.5347395,
+  "buy": 18.7611644,
+  "date": "2022-12-01 14:40:29",
+  "prev_buy": 19.7519903,
+  "prev_sell": 18.9743906
 },{
   "bank_id": 28,
   "bank_name": "BANCAMIFEL",
-  "sell": 19.6505825,
-  "buy": 18.397536,
-  "date": "2022-12-01 14:20:25",
-  "prev_buy": 19.85712,
-  "prev_sell": 18.5952
+  "sell": 19.6497625,
+  "buy": 18.397056,
+  "date": "2022-12-01 14:40:30",
+  "prev_buy": 19.8682925,
+  "prev_sell": 18.606144
 },{
   "bank_id": 29,
   "bank_name": "AMERICAN EXPRESS",
-  "sell": 19.62086699,
-  "buy": 18.71374365,
-  "date": "2022-12-01 14:20:25",
-  "prev_buy": 19.82709216,
-  "prev_sell": 18.914805
+  "sell": 19.62004823,
+  "buy": 18.7132554,
+  "date": "2022-12-01 14:40:30",
+  "prev_buy": 19.83824777,
+  "prev_sell": 18.9259371
 },{
   "bank_id": 30,
   "bank_name": "VISA",
-  "sell": 19.60265425,
-  "buy": 18.73290775,
-  "date": "2022-12-01 14:20:26",
-  "prev_buy": 19.808688,
-  "prev_sell": 18.934175
+  "sell": 19.60183625,
+  "buy": 18.732419,
+  "date": "2022-12-01 14:40:31",
+  "prev_buy": 19.81983325,
+  "prev_sell": 18.9453185
 },{
   "bank_id": 31,
   "bank_name": "MASTERCARD",
-  "sell": 19.60265425,
-  "buy": 18.7233257,
-  "date": "2022-12-01 14:20:26",
-  "prev_buy": 19.808688,
-  "prev_sell": 18.92449
+  "sell": 19.60183625,
+  "buy": 18.7228372,
+  "date": "2022-12-01 14:40:31",
+  "prev_buy": 19.81983325,
+  "prev_sell": 18.9356278
 },{
   "bank_id": 32,
   "bank_name": "BANORTE",
