commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -46155,6 +46155,10 @@
     {
       "Date": "2022-12-01 10:00",
       "Rate": "19.1715"
+    },
+    {
+      "Date": "2022-12-01 11:00",
+      "Rate": "19.1782"
     }
   ]
 }
