commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -46159,6 +46159,10 @@
     {
       "Date": "2022-12-01 11:00",
       "Rate": "19.1782"
+    },
+    {
+      "Date": "2022-12-01 12:00",
+      "Rate": "19.1638"
     }
   ]
 }
