commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -46163,6 +46163,10 @@
     {
       "Date": "2022-12-01 12:00",
       "Rate": "19.1638"
+    },
+    {
+      "Date": "2022-12-01 13:00",
+      "Rate": "19.1556"
     }
   ]
 }
