--- a/indexDllIos.html
+++ b/indexDllIos.html
@@ -33,11 +33,11 @@
 },{
   "bank_id": 5,
   "bank_name": "SCOTIABANK",
-  "sell": 19.4963175,
-  "buy": 18.76896,
-  "date": "2022-12-01 17:10:10",
-  "prev_buy": 19.6581,
-  "prev_sell": 18.9189
+  "sell": 19.529895,
+  "buy": 18.79542,
+  "date": "2022-12-01 17:20:11",
+  "prev_buy": 19.6346975,
+  "prev_sell": 18.9042
 },{
   "bank_id": 6,
   "bank_name": "BANXICO",
@@ -57,11 +57,11 @@
 },{
   "bank_id": 8,
   "bank_name": "BANSI",
-  "sell": 19.4005125,
-  "buy": 18.86472,
-  "date": "2022-12-01 17:10:13",
-  "prev_buy": 19.5615,
-  "prev_sell": 19.015425
+  "sell": 19.433925,
+  "buy": 18.891315,
+  "date": "2022-12-01 17:20:13",
+  "prev_buy": 19.5382125,
+  "prev_sell": 19.00065
 },{
   "bank_id": 9,
   "bank_name": "BAJIO",
@@ -92,8 +92,8 @@
   "sell": 19.57788,
   "buy": 18.79542,
   "date": "2022-12-01 17:10:14",
-  "prev_buy": 19.7064,
-  "prev_sell": 18.9189
+  "prev_buy": 19.68294,
+  "prev_sell": 18.9042
 },{
   "bank_id": 13,
   "bank_name": "BANCOAZTECA",
@@ -113,11 +113,11 @@
 },{
   "bank_id": 15,
   "bank_name": "BANJERCITO",
-  "sell": 19.6612,
-  "buy": 18.6507,
-  "date": "2022-12-01 17:10:16",
-  "prev_buy": 19.7959,
-  "prev_sell": 18.7854
+  "sell": 19.6618,
+  "buy": 18.6513,
+  "date": "2022-12-01 17:20:18",
+  "prev_buy": 19.7931,
+  "prev_sell": 18.7826
 },{
   "bank_id": 16,
   "bank_name": "BANREGIO",
@@ -164,40 +164,40 @@
   "sell": 19.501104,
   "buy": 18.6899355,
   "date": "2022-12-01 17:10:20",
-  "prev_buy": 19.62912,
-  "prev_sell": 18.8127225
+  "prev_buy": 19.605752,
+  "prev_sell": 18.798105
 },{
   "bank_id": 22,
   "bank_name": "COMPARTAMOS",
   "sell": 19.539492,
   "buy": 18.7282935,
   "date": "2022-12-01 17:10:21",
-  "prev_buy": 19.66776,
-  "prev_sell": 18.8513325
+  "prev_buy": 19.644346,
+  "prev_sell": 18.836685
 },{
   "bank_id": 23,
   "bank_name": "BANCOPPEL",
   "sell": 19.549089,
   "buy": 18.5556825,
   "date": "2022-12-01 17:10:21",
-  "prev_buy": 19.67742,
-  "prev_sell": 18.6775875
+  "prev_buy": 19.6539945,
+  "prev_sell": 18.663075
 },{
   "bank_id": 24,
   "bank_name": "BANCREA",
   "sell": 19.5087816,
   "buy": 18.7493904,
   "date": "2022-12-01 17:10:22",
-  "prev_buy": 19.636848,
-  "prev_sell": 18.872568
+  "prev_buy": 19.6134708,
+  "prev_sell": 18.857904
 },{
   "bank_id": 25,
   "bank_name": "BANKAOOL",
   "sell": 19.424328,
   "buy": 18.565272,
   "date": "2022-12-01 17:10:22",
-  "prev_buy": 19.55184,
-  "prev_sell": 18.68724
+  "prev_buy": 19.528564,
+  "prev_sell": 18.67272
 },{
   "bank_id": 26,
   "bank_name": "BANSEFI",
