commit from netcore service

--- a/indexDllIos.html
+++ b/indexDllIos.html
@@ -35,9 +35,9 @@
   "bank_name": "SCOTIABANK",
   "sell": 19.529895,
   "buy": 18.79542,
-  "date": "2022-12-01 17:20:11",
-  "prev_buy": 19.6346975,
-  "prev_sell": 18.9042
+  "date": "2022-12-01 17:40:10",
+  "prev_buy": 19.6581,
+  "prev_sell": 18.9189
 },{
   "bank_id": 6,
   "bank_name": "BANXICO",
@@ -59,9 +59,9 @@
   "bank_name": "BANSI",
   "sell": 19.433925,
   "buy": 18.891315,
-  "date": "2022-12-01 17:20:13",
-  "prev_buy": 19.5382125,
-  "prev_sell": 19.00065
+  "date": "2022-12-01 17:40:11",
+  "prev_buy": 19.5615,
+  "prev_sell": 19.015425
 },{
   "bank_id": 9,
   "bank_name": "BAJIO",
@@ -91,9 +91,9 @@
   "bank_name": "FAMSA",
   "sell": 19.57788,
   "buy": 18.79542,
-  "date": "2022-12-01 17:10:14",
-  "prev_buy": 19.68294,
-  "prev_sell": 18.9042
+  "date": "2022-12-01 17:40:13",
+  "prev_buy": 19.7064,
+  "prev_sell": 18.9189
 },{
   "bank_id": 13,
   "bank_name": "BANCOAZTECA",
@@ -107,17 +107,17 @@
   "bank_name": "MONEX",
   "sell": 20.22,
   "buy": 19.69,
-  "date": "2022-12-01 17:00:15",
+  "date": "2022-12-01 17:40:14",
   "prev_buy": 20.33,
   "prev_sell": 19.81
 },{
   "bank_id": 15,
   "bank_name": "BANJERCITO",
-  "sell": 19.6618,
-  "buy": 18.6513,
-  "date": "2022-12-01 17:20:18",
-  "prev_buy": 19.7931,
-  "prev_sell": 18.7826
+  "sell": 19.6506,
+  "buy": 18.6401,
+  "date": "2022-12-01 17:40:15",
+  "prev_buy": 19.7945,
+  "prev_sell": 18.784
 },{
   "bank_id": 16,
   "bank_name": "BANREGIO",
@@ -163,47 +163,47 @@
   "bank_name": "CIBANCO",
   "sell": 19.501104,
   "buy": 18.6899355,
-  "date": "2022-12-01 17:10:20",
-  "prev_buy": 19.605752,
-  "prev_sell": 18.798105
+  "date": "2022-12-01 17:40:20",
+  "prev_buy": 19.62912,
+  "prev_sell": 18.8127225
 },{
   "bank_id": 22,
   "bank_name": "COMPARTAMOS",
   "sell": 19.539492,
   "buy": 18.7282935,
-  "date": "2022-12-01 17:10:21",
-  "prev_buy": 19.644346,
-  "prev_sell": 18.836685
+  "date": "2022-12-01 17:40:20",
+  "prev_buy": 19.66776,
+  "prev_sell": 18.8513325
 },{
   "bank_id": 23,
   "bank_name": "BANCOPPEL",
   "sell": 19.549089,
   "buy": 18.5556825,
-  "date": "2022-12-01 17:10:21",
-  "prev_buy": 19.6539945,
-  "prev_sell": 18.663075
+  "date": "2022-12-01 17:40:21",
+  "prev_buy": 19.67742,
+  "prev_sell": 18.6775875
 },{
   "bank_id": 24,
   "bank_name": "BANCREA",
   "sell": 19.5087816,
   "buy": 18.7493904,
-  "date": "2022-12-01 17:10:22",
-  "prev_buy": 19.6134708,
-  "prev_sell": 18.857904
+  "date": "2022-12-01 17:40:21",
+  "prev_buy": 19.636848,
+  "prev_sell": 18.872568
 },{
   "bank_id": 25,
   "bank_name": "BANKAOOL",
   "sell": 19.424328,
   "buy": 18.565272,
-  "date": "2022-12-01 17:10:22",
-  "prev_buy": 19.528564,
-  "prev_sell": 18.67272
+  "date": "2022-12-01 17:40:22",
+  "prev_buy": 19.55184,
+  "prev_sell": 18.68724
 },{
   "bank_id": 26,
   "bank_name": "BANSEFI",
   "sell": 19.597074,
   "buy": 18.354303,
-  "date": "2022-12-01 17:10:23",
+  "date": "2022-12-01 17:40:22",
   "prev_buy": 19.72572,
   "prev_sell": 18.474885
 },{
@@ -211,7 +211,7 @@
   "bank_name": "BANCOFITERRA",
   "sell": 19.558686,
   "buy": 18.776241,
-  "date": "2022-12-01 17:10:23",
+  "date": "2022-12-01 17:40:23",
   "prev_buy": 19.68708,
   "prev_sell": 18.899595
 },{
@@ -219,7 +219,7 @@
   "bank_name": "BANCAMIFEL",
   "sell": 19.67385,
   "buy": 18.41184,
-  "date": "2022-12-01 17:10:24",
+  "date": "2022-12-01 17:40:23",
   "prev_buy": 19.803,
   "prev_sell": 18.5328
 },{
@@ -227,7 +227,7 @@
   "bank_name": "AMERICAN EXPRESS",
   "sell": 19.6440993,
   "buy": 18.7282935,
-  "date": "2022-12-01 17:10:24",
+  "date": "2022-12-01 17:40:24",
   "prev_buy": 19.773054,
   "prev_sell": 18.8513325
 },{
@@ -235,7 +235,7 @@
   "bank_name": "VISA",
   "sell": 19.625865,
   "buy": 18.7474725,
-  "date": "2022-12-01 17:10:25",
+  "date": "2022-12-01 17:40:24",
   "prev_buy": 19.7547,
   "prev_sell": 18.8706375
 },{
@@ -243,7 +243,7 @@
   "bank_name": "MASTERCARD",
   "sell": 19.625865,
   "buy": 18.737883,
-  "date": "2022-12-01 17:10:25",
+  "date": "2022-12-01 17:40:25",
   "prev_buy": 19.7547,
   "prev_sell": 18.860985
 },{
