commit from netcore service

--- a/indexDllIos.html
+++ b/indexDllIos.html
@@ -60,8 +60,8 @@
   "sell": 19.433925,
   "buy": 18.891315,
   "date": "2022-12-01 17:40:11",
-  "prev_buy": 19.5615,
-  "prev_sell": 19.015425
+  "prev_buy": 19.543275,
+  "prev_sell": 18.985875
 },{
   "bank_id": 9,
   "bank_name": "BAJIO",
@@ -92,8 +92,8 @@
   "sell": 19.57788,
   "buy": 18.79542,
   "date": "2022-12-01 17:40:13",
-  "prev_buy": 19.7064,
-  "prev_sell": 18.9189
+  "prev_buy": 19.68804,
+  "prev_sell": 18.8895
 },{
   "bank_id": 13,
   "bank_name": "BANCOAZTECA",
@@ -105,19 +105,19 @@
 },{
   "bank_id": 14,
   "bank_name": "MONEX",
-  "sell": 20.22,
-  "buy": 19.69,
-  "date": "2022-12-01 17:40:14",
+  "sell": 20.33,
+  "buy": 19.81,
+  "date": "2022-12-01 17:50:16",
   "prev_buy": 20.33,
   "prev_sell": 19.81
 },{
   "bank_id": 15,
   "bank_name": "BANJERCITO",
-  "sell": 19.6506,
-  "buy": 18.6401,
-  "date": "2022-12-01 17:40:15",
-  "prev_buy": 19.7945,
-  "prev_sell": 18.784
+  "sell": 19.6542,
+  "buy": 18.6437,
+  "date": "2022-12-01 17:50:17",
+  "prev_buy": 19.7893,
+  "prev_sell": 18.7788
 },{
   "bank_id": 16,
   "bank_name": "BANREGIO",
@@ -164,88 +164,88 @@
   "sell": 19.501104,
   "buy": 18.6899355,
   "date": "2022-12-01 17:40:20",
-  "prev_buy": 19.62912,
-  "prev_sell": 18.8127225
+  "prev_buy": 19.610832,
+  "prev_sell": 18.7834875
 },{
   "bank_id": 22,
   "bank_name": "COMPARTAMOS",
   "sell": 19.539492,
   "buy": 18.7282935,
   "date": "2022-12-01 17:40:20",
-  "prev_buy": 19.66776,
-  "prev_sell": 18.8513325
+  "prev_buy": 19.649436,
+  "prev_sell": 18.8220375
 },{
   "bank_id": 23,
   "bank_name": "BANCOPPEL",
   "sell": 19.549089,
   "buy": 18.5556825,
   "date": "2022-12-01 17:40:21",
-  "prev_buy": 19.67742,
-  "prev_sell": 18.6775875
+  "prev_buy": 19.659087,
+  "prev_sell": 18.6485625
 },{
   "bank_id": 24,
   "bank_name": "BANCREA",
   "sell": 19.5087816,
   "buy": 18.7493904,
   "date": "2022-12-01 17:40:21",
-  "prev_buy": 19.636848,
-  "prev_sell": 18.872568
+  "prev_buy": 19.6185528,
+  "prev_sell": 18.84324
 },{
   "bank_id": 25,
   "bank_name": "BANKAOOL",
   "sell": 19.424328,
   "buy": 18.565272,
   "date": "2022-12-01 17:40:22",
-  "prev_buy": 19.55184,
-  "prev_sell": 18.68724
+  "prev_buy": 19.533624,
+  "prev_sell": 18.6582
 },{
   "bank_id": 26,
   "bank_name": "BANSEFI",
   "sell": 19.597074,
   "buy": 18.354303,
   "date": "2022-12-01 17:40:22",
-  "prev_buy": 19.72572,
-  "prev_sell": 18.474885
+  "prev_buy": 19.707342,
+  "prev_sell": 18.446175
 },{
   "bank_id": 27,
   "bank_name": "BANCOFITERRA",
   "sell": 19.558686,
   "buy": 18.776241,
   "date": "2022-12-01 17:40:23",
-  "prev_buy": 19.68708,
-  "prev_sell": 18.899595
+  "prev_buy": 19.668738,
+  "prev_sell": 18.870225
 },{
   "bank_id": 28,
   "bank_name": "BANCAMIFEL",
   "sell": 19.67385,
   "buy": 18.41184,
   "date": "2022-12-01 17:40:23",
-  "prev_buy": 19.803,
-  "prev_sell": 18.5328
+  "prev_buy": 19.78455,
+  "prev_sell": 18.504
 },{
   "bank_id": 29,
   "bank_name": "AMERICAN EXPRESS",
   "sell": 19.6440993,
   "buy": 18.7282935,
   "date": "2022-12-01 17:40:24",
-  "prev_buy": 19.773054,
-  "prev_sell": 18.8513325
+  "prev_buy": 19.7546319,
+  "prev_sell": 18.8220375
 },{
   "bank_id": 30,
   "bank_name": "VISA",
   "sell": 19.625865,
   "buy": 18.7474725,
   "date": "2022-12-01 17:40:24",
-  "prev_buy": 19.7547,
-  "prev_sell": 18.8706375
+  "prev_buy": 19.736295,
+  "prev_sell": 18.8413125
 },{
   "bank_id": 31,
   "bank_name": "MASTERCARD",
   "sell": 19.625865,
   "buy": 18.737883,
   "date": "2022-12-01 17:40:25",
-  "prev_buy": 19.7547,
-  "prev_sell": 18.860985
+  "prev_buy": 19.736295,
+  "prev_sell": 18.831675
 },{
   "bank_id": 32,
   "bank_name": "BANORTE",
