--- a/indexRt.html
+++ b/indexRt.html
@@ -46167,6 +46167,10 @@
     {
       "Date": "2022-12-01 13:00",
       "Rate": "19.1556"
+    },
+    {
+      "Date": "2022-12-01 14:00",
+      "Rate": "19.1340"
     }
   ]
 }
