--- a/indexRt.html
+++ b/indexRt.html
@@ -46171,6 +46171,10 @@
     {
       "Date": "2022-12-01 14:00",
       "Rate": "19.1340"
+    },
+    {
+      "Date": "2022-12-01 15:00",
+      "Rate": "19.1412"
     }
   ]
 }
