commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -46175,6 +46175,10 @@
     {
       "Date": "2022-12-01 15:00",
       "Rate": "19.1412"
+    },
+    {
+      "Date": "2022-12-01 16:00",
+      "Rate": "19.1433"
     }
   ]
 }
