--- a/indexRt.html
+++ b/indexRt.html
@@ -46179,6 +46179,10 @@
     {
       "Date": "2022-12-01 16:00",
       "Rate": "19.1433"
+    },
+    {
+      "Date": "2022-12-01 17:00",
+      "Rate": "19.1443"
     }
   ]
 }
