--- a/indexRt.html
+++ b/indexRt.html
@@ -46183,6 +46183,10 @@
     {
       "Date": "2022-12-01 17:00",
       "Rate": "19.1443"
+    },
+    {
+      "Date": "2022-12-05 07:00",
+      "Rate": "19.7035"
     }
   ]
 }
