commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -46187,6 +46187,10 @@
     {
       "Date": "2022-12-05 07:00",
       "Rate": "19.7035"
+    },
+    {
+      "Date": "2022-12-05 07:01",
+      "Rate": "19.7035"
     }
   ]
 }
