--- a/indexRt.html
+++ b/indexRt.html
@@ -46191,6 +46191,10 @@
     {
       "Date": "2022-12-05 07:01",
       "Rate": "19.7035"
+    },
+    {
+      "Date": "2022-12-05 08:00",
+      "Rate": "19.7548"
     }
   ]
 }
