commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -46195,6 +46195,10 @@
     {
       "Date": "2022-12-05 08:00",
       "Rate": "19.7548"
+    },
+    {
+      "Date": "2022-12-05 09:00",
+      "Rate": "19.7627"
     }
   ]
 }
