commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -46199,6 +46199,10 @@
     {
       "Date": "2022-12-05 09:00",
       "Rate": "19.7627"
+    },
+    {
+      "Date": "2022-12-05 10:00",
+      "Rate": "19.7833"
     }
   ]
 }
