--- a/indexRt.html
+++ b/indexRt.html
@@ -46203,6 +46203,10 @@
     {
       "Date": "2022-12-05 10:00",
       "Rate": "19.7833"
+    },
+    {
+      "Date": "2022-12-05 11:00",
+      "Rate": "19.7630"
     }
   ]
 }
