--- a/indexRt.html
+++ b/indexRt.html
@@ -46207,6 +46207,10 @@
     {
       "Date": "2022-12-05 11:00",
       "Rate": "19.7630"
+    },
+    {
+      "Date": "2022-12-05 12:00",
+      "Rate": "19.7357"
     }
   ]
 }
