commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -46211,6 +46211,10 @@
     {
       "Date": "2022-12-05 12:00",
       "Rate": "19.7357"
+    },
+    {
+      "Date": "2022-12-05 13:00",
+      "Rate": "19.7305"
     }
   ]
 }
