commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -46215,6 +46215,10 @@
     {
       "Date": "2022-12-05 13:00",
       "Rate": "19.7305"
+    },
+    {
+      "Date": "2022-12-05 14:00",
+      "Rate": "19.7377"
     }
   ]
 }
