--- a/indexRt.html
+++ b/indexRt.html
@@ -46219,6 +46219,10 @@
     {
       "Date": "2022-12-05 14:00",
       "Rate": "19.7377"
+    },
+    {
+      "Date": "2022-12-05 15:00",
+      "Rate": "19.7119"
     }
   ]
 }
